fix button spacing in IE

--- a/custom.css
+++ b/custom.css
@@ -69,7 +69,7 @@ button.round,
   border-radius: 3px;
   display: block;
   float: left;
-  margin: 1rem 0 0 0;
+  margin: 0;
   text-decoration: none;
 }
 button,
